[workspace]

[package]
name = "userbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
libuserbar = { path = "libuserbar", version = "0.1.0" }
pico-args = { version = "0.5.0", features = ["eq-separator", "short-space-opt", "combined-flags"] }
png = "0.17.11"

[profile.release]
strip = "symbols"
opt-level = "s"
lto = "fat"
