[package]
name = "libuserbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libuserbar"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.12.1"
phf = { version = "0.11.2", features = ["macros"] }
wasm-bindgen = "0.2.91"
